--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -196,7 +196,7 @@
 
     <div class="terminal-container" id="terminal-history">
         <div id="terminal-content">
-            <div id="initial-message" class="output-line">System initialized. Type 'help' to begin.</div>
+        <div id="initial-message" class="output-line">System initialized. Type 'help' to begin.<p>TAB function is NOT activated</p></div>
             <div id="command-history"></div>
         </div>
         
