--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -191,7 +191,7 @@
 
     <div class="top-right-ui" id="ui-header">
         <h1 id="ui-title">CONNECT</h1>
-        <a href="#" id="ui-mail-link" class="email-btn">[ SEND_MESSAGE ]</a>
+        <a href="mailto:kandarec@proton.me" id="ui-mail-link" class="email-btn">[ SEND_MESSAGE ]</a>
     </div>
 
     <div class="terminal-container" id="terminal-history">
