--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -210,7 +210,8 @@
 
   <div class="terminal-container" id="terminal-history">
     <div id="terminal-content">
-      <div id="initial-message" class="output-line">System initialized. Type 'help' to begin.<p>TAB function is NOT activated</p>
+      <div id="initial-message" class="output-line">System initialized. Type 'help' to begin.<p>TAB function is NOT
+          activated</p>
       </div>
       <div id="command-history"></div>
     </div>
@@ -293,7 +294,6 @@
 <span class="cmd-highlight">AVAILABLE DIRECTIVES:</span>
   <span class="cmd-highlight">ls</span>           - List artifacts.
   <span class="cmd-highlight">cat [file]</span>   - Read file contents.
-  <span class="cmd-highlight">cat *</span>        - Display all files.
   <span class="cmd-highlight">whoami</span>       - Display identity profile.
   <span class="cmd-highlight">clear</span>        - Flush terminal buffer.
 </div>`,
@@ -328,8 +328,7 @@
           const filename = val.split(' ')[1];
           const res = document.createElement('div');
           res.className = 'output-line';
-          
-          // Handle cat * - display all files
+
           if (filename === '*') {
             let allContent = '';
             for (const [file, content] of Object.entries(CONFIG.files)) {
