--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -234,7 +234,7 @@
       name: "k4ndar3c",
       description: "Passionate, self-taught, curious.",
       email: "kandarec@proton.me",
-      prompt: "root@kanda.rec ~/ #",
+      prompt: "root@ad1.github.local ~/ #",
       files: {
         'projects.txt': `[ Root-Me ]\nhttps://www.root-me.org/k4ndar3c?inc=info&lang=fr\n\n[ pwn.college ]\nhttps://pwn.college/hacker/83598\n\n[ HackTheBox ]\nhttps://app.hackthebox.com/users/1408875\n\n[ NewbieContest ]\nhttps://www.newbiecontest.org/index.php?page=info_membre&id=79413\n\n[ Github ]\nhttps://github.com/k4ndAr3c\n\n`,
         'skills.txt': `- Linux Admin\n- Python\n- Bash\n- CTF Enthusiast\n`,
