--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -222,14 +222,11 @@
     </div>
   </div>
 
-  <div class="bottom-hint">Type "man root"</div>
+  <div class="bottom-hint">HINT: rtfm</div>
 
-  <!-- Link back to creator -->
   <a href="https://k4ndar3c.github.io/hugos1te/" target="_blank" class="footer-credit">Shellfolio</a>
 
   <script>
-    /* CONFIG: Users can edit these values to customize the portfolio
-    */
     const CONFIG = {
       name: "k4ndar3c",
       description: "Passionate, self-taught, curious.",
