--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -279,7 +279,7 @@
     const COMMANDS = {
       'ls': Object.keys(CONFIG.files).join('\n'),
       'whoami': CONFIG.name,
-      'help': 'Commands: ls, cat [file], whoami, man, clear, sudo, matrix, nmap',
+      'help': 'Commands: ls, cat [file], whoami, man, clear, sudo',
       'clear': 'CLEAR',
       'sudo': '<span class="matrix-glitch">ERROR: User not in sudoers file. This incident will be reported.</span>',
       'man': `
