--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -293,6 +293,9 @@
   <span class="cmd-highlight">whoami</span>       - Display identity profile.
   <span class="cmd-highlight">clear</span>        - Flush terminal buffer.
   <span class="cmd-highlight">man</span>          - Display manual.
+
+<span class="cmd-highlight">TAB COMPLETION:</span>
+  Press TAB to auto-complete ALL commands and filenames.
 </div>`,
       'matrix': 'Wake up, Neo ...',
       'nmap': 'Try learning nmap: https://nmap.org'
