--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -295,7 +295,7 @@
   <span class="cmd-highlight">man</span>          - Display manual.
 
 <span class="cmd-highlight">TAB COMPLETION:</span>
-  Press TAB to auto-complete ALL commands and filenames.
+  Press TAB to auto-complete all commands and filenames.
 </div>`,
       'matrix': 'Wake up, Neo ...',
       'nmap': 'Try learning nmap: https://nmap.org'
