--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -232,7 +232,7 @@
       prompt: "root@github.local ~/ #",
       files: {
         'projects.txt': `[ Root-Me ]\nhttps://www.root-me.org/k4ndar3c?inc=info&lang=fr\n\n[ pwn.college ]\nhttps://pwn.college/hacker/83598\n\n[ HackTheBox ]\nhttps://app.hackthebox.com/users/1408875\n\n[ NewbieContest ]\nhttps://www.newbiecontest.org/index.php?page=info_membre&id=79413\n\n[ Github ]\nhttps://github.com/k4ndAr3c\n\n`,
-        'skills.txt': `- Linux Admin\n- Python\n- Bash\n- CTF Enthusiast\n`,
+        'skills.txt': `- Linux Admin\n- Python\n- Bash\n- CTF Enthusiast\n- PWN`,
         'passions.txt': `- Continuous Learning\n- Cybersecurity\n- Martial Art\n- Musician\n`,
       }
     };
