--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -396,7 +396,7 @@
           historyContainer.appendChild(res);
         } else if (rawVal === 'root-me') {
           const res = document.createElement('div');
-          res.innerHTML = '<img src="https://camo.githubusercontent.com/cb9361b9582aa0ab1a098f5d010803073bde24ca919cef2c8a77e7f657b1ce58/68747470733a2f2f726f6f742d6d652d646966662e76657263656c2e6170702f726d2d67683f6e69636b6e616d653d6b346e6461723363267374796c653d6461726b266773746174733d73686f77" alt="Root-me-stats" data-canonical-src="https://root-me-diff.vercel.app/rm-gh?nickname=k4ndar3c&amp;style=dark&amp;gstats=show" style="max-width: 100%;">';
+          res.innerHTML = '<img src="https://camo.githubusercontent.com/cb9361b9582aa0ab1a098f5d010803073bde24ca919cef2c8a77e7f657b1ce58/68747470733a2f2f726f6f742d6d652d646966662e76657263656c2e6170702f726d2d67683f6e69636b6e616d653d6b346e6461723363267374796c653d6461726b266773746174733d73686f77" alt="Root-me-stats-k4ndar3c" data-canonical-src="https://root-me-diff.vercel.app/rm-gh?nickname=k4ndar3c&amp;style=dark&amp;gstats=show" style="max-width: 100%;">';
           historyContainer.appendChild(res);
         } else if (rawVal === 'clear') {
           historyContainer.innerHTML = '';
