--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -222,7 +222,7 @@
 
   <div class="bottom-hint">HINT: rtfm</div>
 
-  <a href="https://k4ndar3c.github.io/hugos1te/" target="_blank" class="footer-credit">Shellfolio</a>
+  <a href="https://k4ndar3c.github.io/hugos1te/" target="_blank" class="footer-credit">my webs1te</a>
 
   <script>
     const CONFIG = {
