--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -298,6 +298,7 @@
 <span class="cmd-highlight">TAB COMPLETION:</span>
   Press TAB to auto-complete all commands and filenames.
 </div>`,
+      'root-me': "My stats",
       'matrix': 'Wake up, Neo ...',
       'nmap': 'Try learning nmap: https://nmap.org'
     };
