--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -299,7 +299,8 @@
   Press TAB to auto-complete all commands and filenames.
 </div>`,
       'root-me': "My stats",
-      'nmap': 'Try learning nmap: https://nmap.org'
+      'nmap': 'Try learning nmap: https://nmap.org',
+      'tmux': "[-] Can't run tmux, shell has no tty."
     };
 
     let cmdHistory = [];
