--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -293,7 +293,7 @@
   <span class="cmd-highlight">whoami</span>       - Display identity profile.
   <span class="cmd-highlight">clear</span>        - Flush terminal buffer.
   <span class="cmd-highlight">man</span>          - Display manual.
-  <span class="cmd-highlight">root-me</span>      - Display Root-Me stats.
+  <span class="cmd-highlight">root-me</span>      - Display my Root-Me stats.
 
 <span class="cmd-highlight">TAB COMPLETION:</span>
   Press TAB to auto-complete all commands and filenames.
