--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -232,9 +232,9 @@
       email: "kandarec@proton.me",
       prompt: "root@github.local ~/ #",
       files: {
-        'projects.txt': `[ Root-Me ]\nhttps://www.root-me.org/k4ndar3c?inc=info&lang=fr\n\n[ pwn.college ]\nhttps://pwn.college/hacker/83598\n\n[ HackTheBox ]\nhttps://app.hackthebox.com/users/1408875\n\n[ NewbieContest ]\nhttps://www.newbiecontest.org/index.php?page=info_membre&id=79413\n\n[ Github ]\nhttps://github.com/k4ndAr3c\n\n[ Discord ]\nWith my bot\nhttps://discord.gg/mhY9fDjAmR\n\n`,
-        'skills.txt': `- Linux Admin\n- TSSR\n- Python\n- Bash\n- CTF Enthusiast\n- PWN`,
-        'passions.txt': `- Continuous Learning\n- Cybersecurity\n- Martial Art\n- Musician\n`,
+        'projects.txt': `[ Root-Me ]\nhttps://www.root-me.org/k4ndar3c?inc=info\n\n[ pwn.college ]\nhttps://pwn.college/hacker/83598\n\n[ HackTheBox ]\nhttps://app.hackthebox.com/users/1408875\n\n[ NewbieContest ]\nhttps://www.newbiecontest.org/index.php?page=info_membre&id=79413\n\n[ Github ]\nhttps://github.com/k4ndAr3c\n\n[ Discord ]\nWith my bot\nhttps://discord.gg/mhY9fDjAmR\n\n`,
+        'skills.txt': `- Linux Admin\n- TSSR\n- Python\n- Bash\n- CTF Enthusiast\n- PWN\n`,
+        'passions.txt': `- Continuous Learning\n- Cybersecurity\n- Martial Art\n- Musician\n- Format String Bug\n`,
       }
     };
 
@@ -302,6 +302,7 @@
       'root-me': "My stats",
       'nmap': 'Try learning nmap: https://nmap.org',
       'tmux': "[-] Can't run tmux, shell has no tty."
+      'update': 'eix-sync ; emerge -1DNuavt @world'
     };
 
     let cmdHistory = [];
