--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -302,7 +302,7 @@
       'root-me': "My stats",
       'nmap': 'Try learning nmap: https://nmap.org',
       'tmux': "[-] Can't run tmux, shell has no tty."
-      'update': 'eix-sync ; emerge -1DNuavt @world'
+      'upgrade': 'eix-sync ; emerge -1DNuavt @world'
     };
 
     let cmdHistory = [];
