--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -274,7 +274,7 @@
         'projects.txt': `[ Root-Me ]\nhttps://www.root-me.org/k4ndar3c?inc=info\n\n[ pwn.college ]\nhttps://pwn.college/hacker/83598\n\n[ HackTheBox ]\nhttps://app.hackthebox.com/users/1408875\n\n[ NewbieContest ]\nhttps://www.newbiecontest.org/index.php?page=info_membre&id=79413\n\n[ Github ]\nhttps://github.com/k4ndAr3c\n\n[ Discord ]\nWith my bot\nhttps://discord.gg/mhY9fDjAmR\n`,
         'skills.txt': `- Linux Admin\n- TSSR\n- Python\n- Bash\n- CTF Enthusiast\n- PWN\n`,
         'passions.txt': `- Continuous Learning\n- Cybersecurity\n- Martial Art\n- Musician\n- Format String Bug\n`,
-        'bonus.txt': '- <b>meteo () { curl -s "http://wttr.in/$1" ; }</b>\n',
+        'bonus.txt': '- meteo () { curl -s "http://wttr.in/$1" ; }\n',
       }
     };
 
