add katakana hiragana

--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -292,7 +292,7 @@
     let width = canvas.width = window.innerWidth;
     let height = canvas.height = window.innerHeight;
     let columns = Math.floor(width / 20);
-    const characters = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ$+-*/=%\"'#&_(),.;:?!\\|{}<>[]^~";
+    const characters = "あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめもやゆよらりるれろわをんアイウエオカキクケコサシスセソタチツテトナニヌネノハヒフヘホマミムメモヤユヨラリルレロワヲン0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ$+-*/=%\"'#&_(),.;:?!\\|{}<>[]^~";
     const drops = Array(columns).fill(1);
 
     function drawMatrix() {
