--- a/static/shellfolio.html
+++ b/static/shellfolio.html
@@ -400,7 +400,7 @@
   <span class="cmd-highlight">whoami</span>       - Display identity profile.
   <span class="cmd-highlight">clear</span>        - Flush terminal buffer.
   <span class="cmd-highlight">man</span>          - Display manual.
-  <span class="cmd-highlight">root-me</span>      - Display my Root-Me stats. (maybe run 2 times, sometimes)
+  <span class="cmd-highlight">root-me</span>      - Display my Root-Me stats. (must be run 2 times, sometimes)
   <span class="cmd-highlight">upgrade</span>      - Full system upgrade.
 
 <span class="cmd-highlight">TAB COMPLETION:</span>
